--- a/Wpf/WpfText.de.resx
+++ b/Wpf/WpfText.de.resx
@@ -269,6 +269,14 @@
     <value>Sitzung</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="BusyStatusCleaningMigration" xml:space="preserve">
+    <value>Aufräumen nach der Migration</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="BusyStatusRunningMigration" xml:space="preserve">
+    <value>{0}-Migration wird ausgeführt</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="BusySubmittingReport" xml:space="preserve">
     <value>Bericht einreichen.</value>
     <comment>from GoogleTranslator2</comment>
@@ -292,6 +300,10 @@
   <data name="ButtonBack" xml:space="preserve">
     <value>ZURÜCK</value>
     <comment>from GoogleTranslator2</comment>
+  </data>
+  <data name="ButtonBrowse" xml:space="preserve">
+    <value>DURCHSUCHE</value>
+    <comment>from GoogleTranslator</comment>
   </data>
   <data name="ButtonCancel" xml:space="preserve">
     <value>ABBRECHEN</value>
@@ -421,6 +433,18 @@ Optionen:
   <data name="DatabaseCreationDialogEncryptEUA" xml:space="preserve">
     <value>Wenn Sie diese Datenbank zum ersten Mal öffnen, werden Sie aufgefordert, das Passwort festzulegen.Bei jeder nachfolgenden Zeit wird das gleiche Passwort eingegeben werden.</value>
     <comment>from GoogleTranslator2</comment>
+  </data>
+  <data name="DatabaseCreationDialogMigration" xml:space="preserve">
+    <value>Importieren Sie Daten aus einer anderen Quelle</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="DatabaseCreationDialogMigrationPath" xml:space="preserve">
+    <value>Weg</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="DatabaseCreationDialogMigrationSource" xml:space="preserve">
+    <value>Quelle</value>
+    <comment>from GoogleTranslator</comment>
   </data>
   <data name="DatabaseCreationDialogNameEmpty" xml:space="preserve">
     <value>Darf nicht leer sein</value>
